# rasto

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: pretty_print_simple.rs  pretty_print_trait.rs
src/: ast.rs  builder.rs  lib.rs  pretty_print.rs  pretty_printer.rs  pretty_printer_v2.rs
src/ast/: abi.rs  associated_const.rs  associated_type.rs  attributes.rs  builder.rs  comments.rs  expressions.rs  file.rs  generics.rs  ident.rs  item_asm.rs  item_const.rs  item_def.rs  item_enum.rs  item_extern_block.rs  item_extern_crate.rs  item_extern_type.rs  item_fn.rs  item_foreign_mod.rs  item_impl.rs  item_macro.rs  item_mod.rs  item_static.rs  item_struct.rs  item_trait.rs  item_trait_alias.rs  item_type.rs  item_type_alias.rs  item_union.rs  item_use.rs  items.rs  keyword.rs  literals.rs  macros.rs  metadata.rs  mod.rs  patterns.rs  statements.rs  tokens.rs  types.rs  (+2 more)
tests/: .patterns.rs.pending-snap  asm.rs  associated_const.rs  attributes.rs  builder.rs  expressions.rs  extern_block.rs  file.rs  from_impls.rs  generics.rs  infer_expr.rs  items.rs  literals.rs  macros.rs  metadata.rs  more_builder.rs  patterns.rs  pretty_print.rs  pretty_print_expressions.rs  raw_ident.rs  signature.rs  visibility.rs
tests/snapshots/: asm__asm_macro.snap  attributes__fn_with_attributes.snap  builder__fn_builder.snap  builder__fn_builder_with_metadata.snap  expressions__async_expr.snap  expressions__binary_expr_parentheses.snap  expressions__binary_expr_parentheses_right.snap  expressions__cast_expr.snap  (+166 more)
(+1 files in other folders)
