[package]
name = "rasto"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.43.2"
thin-vec = "0.2.14"

[lints.clippy]
bool_comparison = "allow" # reason: `expr == false` is better than !expr suggeste by clippy

[[example]]
name = "pretty_print_simple"
path = "examples/pretty_print_simple.rs"

[[example]]
name = "pretty_print_trait"
path = "examples/pretty_print_trait.rs"